# Neural-Network-from-Scratch

./: .gitignore  Data_Loaders.ipynb  README.md  main.py  pyproject.toml  pytorch_dl.ipynb
Dataset_Loaders/: Dataloader_Pytorch.ipynb
Pytorch/: Transfer_learning.ipynb
notebooks/: README.md
notebooks/01_fundamentals/: 02_sft_batch_preparation.ipynb  03_pytorch_scripts_visualization.ipynb  README.md  SFT.ipynb  nn_end_to_end.ipynb
notebooks/02_data_loading/: 01_dataset_preparation_and_loading.ipynb  02_pytorch_dataloader_workflow.ipynb  README.md  data_loaders.ipynb  dataloader_pytorch.ipynb
notebooks/03_computer_vision/: 01_mnist_cnn_end_to_end.ipynb  02_transfer_learning_with_alexnet.ipynb  README.md  simple_vision_end_to_end.ipynb  transfer_learning.ipynb
src/neural_network_from_scratch/: __init__.py  cli.py
