[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-network-from-scratch"
version = "0.1.0"
description = "Educational PyTorch notebooks for learning tensors, data loaders, neural networks, and transfer learning from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pillow",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "notebook",
]

[project.scripts]
nn-scratch = "neural_network_from_scratch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
